--- a/.env.sample
+++ b/.env.sample
@@ -25,7 +25,7 @@ Name="${APPNAME}"
 GenericName=
 NoDisplay=
 Comment="${DESCRIPTION}"
-Icon=org.example.HelloWorldTk
+Icon="${ID}"
 Hidden=
 OnlyShowIn=
 DBusActivatable=
